--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "paths": {
       "@/components/*": ["components/*"],
       "@/pages/*": ["src/pages/*"],
-      "@/styles/*": ["styles/*"]
+      "@/styles/*": ["src/styles/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "types.d.ts"],
