--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,12 +19,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js 
-    - uses: actions/setup-node@v3
+      uses: actions/setup-node@v3
       with:
         node-version: 16
         cache: 'yarn'
         cache-dependency-path: ./src/yarn.lock
-      
     - run: rm -rf node_modules && yarn install --frozen-lockfile
-    - run: yarn build 
+    - run: yarn build
     - run: yarn test:ci
