--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 16
-        cache: 'yarn'
-        cache-dependency-path: ./src/yarn.lock
+        cache: yarn
+        cache-dependency-path: ./yarn.lock
     - run: rm -rf node_modules && yarn install --frozen-lockfile
     - run: yarn build
     - run: yarn test:ci
