--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "14.2.0",
     "@types/react": "18.0.9",
+    "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
     "jest": "28.1.0",
     "jest-environment-jsdom": "28.1.0",
