--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json}'"
   },
   "dependencies": {
+    "eslint-config-next": "^12.3.1",
+    "eslint-plugin-testing-library": "^5.6.4",
     "next": "latest",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
