--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "18.0.9",
     "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.5.1",
     "jest": "28.1.0",
     "jest-environment-jsdom": "28.1.0",
     "prettier": "^2.7.1",
