--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "eslint-config-next": "^12.3.1",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-testing-library": "^5.6.4",
     "next": "latest",
     "react": "^18.1.0",
@@ -19,6 +20,7 @@
     "sass": "^1.54.9"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.18.1",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "14.2.0",
