--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jest": "28.1.0",
     "jest-environment-jsdom": "28.1.0",
     "prettier": "^2.7.1",
-    "typescript": "4.6.4"
+    "typescript": "4.6.4",
+    "whatwg-fetch": "^3.6.2"
   }
 }
