--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "latest",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "recharts": "^2.1.14",
     "sass": "^1.54.9"
   },
   "devDependencies": {
