--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "14.2.0",
+    "@types/chart.js": "^2.9.37",
     "@types/react": "18.0.9",
+    "chart.js": "^3.9.1",
     "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.5.1",
     "jest": "28.1.0",
     "jest-environment-jsdom": "28.1.0",
     "prettier": "^2.7.1",
+    "react-chartjs-2": "^4.3.1",
     "typescript": "4.6.4",
     "whatwg-fetch": "^3.6.2"
   }
